--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+.DS_Store
+.build
+.swiftpm
+
 ## User settings
 xcuserdata/
 
