--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
-      run: swift test -
+      run: swift test -v
     
